--- a/semi.html
+++ b/semi.html
@@ -35,7 +35,6 @@
         #user-input {
             display: flex;
             padding: 10px;
- 
         }
         #user-input input {
             flex: 1;
@@ -59,6 +58,6 @@
             <button>전송</button>
         </div>
     </div>
-    <script src="chatbot.js"></script>
+    <script type="module" src="chatbot.js"></script>
 </body>
 </html>
